tests/invalid/operator_variable_mismatch.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "OperatorVariableMismatch",
    "description": "Test case: operator references variables that don't exist in coupled systems",
    "authors": ["Test Suite"]
  },

  "operators": {
    "TestOperator": {
      "operator_id": "DepositionOp",
      "needed_vars": ["O3", "NO2", "nonexistent_variable", "T"],
      "modifies": ["O3", "NO2", "another_nonexistent_var"],
      "description": "Operator with mismatched variable references"
    }
  },

  "models": {
    "ChemistryModel": {
      "variables": {
        "O3": { "type": "state", "units": "mol/mol", "default": 50e-9 },
        "NO": { "type": "state", "units": "mol/mol", "default": 10e-9 },
        "T": { "type": "parameter", "units": "K", "default": 298.15 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["O3"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-1e-5, "O3"] }
        }
      ]
    }
  },

  "coupling": [
    {
      "type": "operator_apply",
      "operator": "TestOperator",
      "description": "This should fail due to variable mismatches"
    }
  ]
}